// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<API /> should render two API keys 1`] = `
<div>
  <Flex
    alignContent="stretch"
    alignItems="center"
    direction="row"
    justifyContent="flex-start"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "-7px",
      }
    }
    wrap="nowrap"
  >
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <div
        style={
          Object {
            "whiteSpace": "wrap",
          }
        }
      >
        <span>
          Manage API keys for accessing the 
        </span>
        <a
          href="https://docs.virtool.ca/web-api/authentication.html"
          rel="noopener noreferrer"
          target="_blank"
        >
          Virtool API
        </a>
        <span>
          .
        </span>
      </div>
    </FlexItem>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={1}
      pad={7}
      shrink={0}
    >
      <withRouter(LinkContainer)
        className="pull-right"
        to={
          Object {
            "state": Object {
              "createAPIKey": true,
            },
          }
        }
      >
        <Button
          bsStyle="primary"
          icon="key"
          pullRight={true}
          tipPlacement="top"
        >
          Create
        </Button>
      </withRouter(LinkContainer)>
    </FlexItem>
  </Flex>
  <div>
    <Connect(APIKey)
      apiKey={
        Object {
          "id": "foo",
        }
      }
      key="foo"
    />
    <Connect(APIKey)
      apiKey={
        Object {
          "id": "bar",
        }
      }
      key="bar"
    />
  </div>
  <Connect(CreateAPIKey) />
</div>
`;

exports[`<API /> should render when loading API keys 1`] = `
<LoadingPlaceholder
  margin="150px"
/>
`;

exports[`<API /> should render with 0 API keys 1`] = `
<div>
  <Flex
    alignContent="stretch"
    alignItems="center"
    direction="row"
    justifyContent="flex-start"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "-7px",
      }
    }
    wrap="nowrap"
  >
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      shrink={1}
    >
      <div
        style={
          Object {
            "whiteSpace": "wrap",
          }
        }
      >
        <span>
          Manage API keys for accessing the 
        </span>
        <a
          href="https://docs.virtool.ca/web-api/authentication.html"
          rel="noopener noreferrer"
          target="_blank"
        >
          Virtool API
        </a>
        <span>
          .
        </span>
      </div>
    </FlexItem>
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={1}
      pad={7}
      shrink={0}
    >
      <withRouter(LinkContainer)
        className="pull-right"
        to={
          Object {
            "state": Object {
              "createAPIKey": true,
            },
          }
        }
      >
        <Button
          bsStyle="primary"
          icon="key"
          pullRight={true}
          tipPlacement="top"
        >
          Create
        </Button>
      </withRouter(LinkContainer)>
    </FlexItem>
  </Flex>
  <div>
    <NoneFound
      noun="API keys"
    />
  </div>
  <Connect(CreateAPIKey) />
</div>
`;
